Fix styling to Dark Mode

--- a/htdocs/css/bootstrap.css
+++ b/htdocs/css/bootstrap.css
@@ -6,6 +6,7 @@
 
 /*! normalize.css v3.0.0 | MIT License | git.io/normalize */
 html {
+  filter: invert(1) hue-rotate(180deg) brightness(0.8) contrast(0.8);
   font-family: sans-serif;
   -webkit-text-size-adjust: 100%;
       -ms-text-size-adjust: 100%;
