--- a/htdocs/css/mpd.css
+++ b/htdocs/css/mpd.css
@@ -1,3 +1,13 @@
+html {
+  filter: invert(100%) hue-rotate(180deg) greyscale(100%) brightness(0.8) contrast(0.9) !important;
+}
+
+.navbar-inverse {
+  border: 0;
+  background-color: #FFFFFF;
+  color:
+}
+
 body {
   padding-top: 50px;
   padding-bottom: 50px;
